[package]
name = "tunnel"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rcgen = "0.13"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
dashmap = "6.0"
tls-parser = "0.12" 
nom = "7" 
h2 = "0.4"
http = "1"
bytes = "1"
futures = "0.3"
rand = "0.8"
