[workspace]
members = ["tunnel-common", "tunnel-client", "tunnel-client-ffi", "client", "tunnel-server", "relay"]
resolver = "2"

[workspace.package]
authors = ["Papers AG"]
repository = "https://github.com/acurast"
version = "0.1.2"
edition = "2024"

[workspace.dependencies]
tunnel-common = { path = "tunnel-common" }
tunnel-client = { path = "tunnel-client" }
tunnel-server = { path = "tunnel-server" }
tokio = { version = "1", features = ["full"] }
quinn = { version = "0.11", features = ["rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rcgen = "0.14"
yasna = "0.5"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
dashmap = "6.0"
tls-parser = "0.12"
nom = "7"
h2 = "0.4"
http = "1"
bytes = "1"
futures = "0.3"
rand = "0.9"
log = "0.4"
env_logger = "0.11"
instant-acme = "0.8.5"
x509-parser = "0.18"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
p256 = { git = "https://github.com/Acurast/elliptic-curves", branch = "master", features = ["ecdsa", "sha256"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
uniffi = { version = "0.29", features = ["cli", "tokio"] }
thiserror = "2"
async-trait = "0.1"
