[package]
name = "tunnel-client-ffi"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "tunnel_client_ffi"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
tunnel-client = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uniffi = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
yasna = { workspace = true }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"
