[package]
name = "tunnel-server"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "tunnel_server"
path = "src/lib.rs"

[dependencies]
tunnel-common = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }
tls-parser = { workspace = true }
nom = { workspace = true }
h2 = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
rustls-pemfile = { workspace = true }
instant-acme = { workspace = true }
serde_json = { workspace = true }
x509-parser = { workspace = true }
yasna = { workspace = true }
base64 = { workspace = true }
hickory-resolver = { workspace = true }
